-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.7.0 Beta2, 6.8.0 FF
-
None
-
6c9665243 (dev), d71eb8f03 (6.7)
C:\Users\qt\work\qt\qttools\src\linguist\linguist\finddialog.cpp(27): error C2220: the following warning is treated as an error C:\Users\qt\work\qt\qttools\src\linguist\linguist\finddialog.cpp(27): warning C4996: 'QCheckBox::stateChanged': Use checkStateChanged() instead
Details: https://testresults.qt.io/coin/integration/qt/qttools/tasks/1706417370
Tested changes (refs/builds/qtci/6.7/1705758357):
https://codereview.qt-project.org/c/qt/qttools/+/532732/2 Update dependencies on '6.7' in qt/qttools
| For Gerrit Dashboard: QTBUG-121377 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 532682,2 | Linguist: Replace to-be-deprecated QCheckBox::stateChanged signal | dev | qt/qttools | Status: MERGED | +2 | 0 |
| 532784,2 | Linguist: Replace to-be-deprecated QCheckBox::stateChanged signal | 6.7 | qt/qttools | Status: MERGED | +2 | 0 |