Linguist: Replace to-be-deprecated QCheckBox::stateChanged signal

Fixes: QTBUG-121377
Change-Id: I89c91d97d35e2c5830cbe70b915415ef73e13b29
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 6c966524362c5a6b313e50384b201fa293a19daa)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>